--- a/public/css/general.css
+++ b/public/css/general.css
@@ -203,6 +203,66 @@ div.breadcrumbBar ul li + li::before {
     display: none;
 }
 
+/* FORMULARIOS */
+.formContainer{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.formRow{
+    display: flex;
+    flex-direction: column;
+}
+
+.formButtons{
+    display: inline-flex;
+    margin: 15px 0;
+}
+    .btnForm{
+        display: inline-block;
+        margin: 0 10px;
+        padding: 8px 15px;
+        color: #fff;
+        border-radius: 8px;
+        border: 0px;
+        background-color: #2286c3;
+    }
+    .btnForm.secondary{
+        background-color: #546E7A;
+    }
+
+input.formControl{ box-sizing: border-box;}
+    input[type=text].formControl{
+        border-radius: 8px;
+        padding: 7px 15px;
+        border: 0px;
+        box-shadow: inset 0px 0px 4px 0px rgba(0,0,0,.2);
+    }
+    input[type=text].formControl:focus{
+        outline:none;
+        border-radius: 8px;
+        padding: 7px 15px;
+        border: 0px;
+        box-shadow: inset 0px 0px 4px 0px #2286c3aa;
+    }
+    select.formControl{
+        border-radius: 8px;
+        padding: 7px 15px;
+        border: 0px;
+        box-shadow: inset 0px 0px 4px 0px rgba(0,0,0,.2);
+    }
+    select.formControl:focus{
+        outline:none;
+        border-radius: 8px;
+        padding: 7px 15px;
+        border: 0px;
+        box-shadow: inset 0px 0px 4px 0px #2286c3aa;
+    }
+    
+
 /* Tabla estilo material */
 table.tableMaterial thead tr th{
     position: relative;
