--- a/public/css/general.css
+++ b/public/css/general.css
@@ -116,6 +116,7 @@ header.header{
         padding: 0px;
     }
     .appContent .appMenu ul li a{
+        position: relative;
         display: block;
         padding: 15px 30px;
         width: 100%;
@@ -165,6 +166,19 @@ header.header{
     .appContent .appMenu.smallMenu ul li a{
         padding: 15px 15px;
     }
+    /* MENU SPANDING */
+    .appContent .appMenu.smallMenu.spanding ul li:hover a span{
+        display: flex;
+        position: absolute;
+        left: 100%;
+        top: 0px;
+        align-items: center;
+        padding: 15px;
+        background: #2286c3;
+        z-index: -1;
+        box-shadow: 0px 0px 6px 0px rgba(0,0,0,.5);
+    }
+
 
 /* BREADCRUMB */
 
